@startuml
hide circle
skinparam Linetype ortho
skinparam Ranksep 60
skinparam Nodesep 100

entity User {
    * id: <<uuid>>
    ---
    * userName: string
    * email: string
    * createdAt: timestamp
    * teacher: boolean
    * student: boolean
    * administrator: boolean
    * hashedPassword: string
    deletedAt: timestamp
}

entity Course{
    * id: string
    ---
    * guarantor: <<FK>>
    * faculty: <<FK>>
    * description: string
    * name: string
    * credits: int
    deletedAt: timestamp
}

entity SeminarGroup {
    * id: <<uuid>>
    ---
    * teacher: <<FK>>
    * course: <<FK>>
    * registrationStart: timestamp
    * registrationEnd: timestamp
    * capacity: int
    * groupNumber: int
    * room: string
    * timeSlot: <<FK>>
    deletedAt: timestamp
}

entity Semester {
    * id: <<uuid>>
    ---
    * year: int
    * season: enum
    * semesterStart: timestamp
    * semesterEnd: timestamp
    deletedAt: timestamp
}

entity Faculty {
    * id: <<uuid>>
    ---
    * name: string
    deletedAt: timestamp
}

entity CourseSemester {
    * id: <<uuid>>
    ---
    * course: <<FK>>
    * semester: <<FK>>
    * registrationStart: timestamp
    * registrationEnd: timestamp
    * capacity: int
    room: string
    timeSlot: <<FK>>
    deletedAt: timestamp
}

entity CourseStudent {
    * id: <<uuid>>
    ---
    * course: <<FK>>
    * user: <<FK>>
    deletedAt: timestamp
}

entity GroupStudent {
    * id: <<uuid>>
    ---
    * group: <<FK>>
    * user: <<FK>>
    deletedAt: timestamp
}

Enum SemesterSeasonEnum {
    SPRING
    FALL
}

entity TimeSlot {
    * id: <<uuid>>
    ---
    * day: enum
    * startHour: int
    * startMinute: int
    * endHour: int
    * endMinute: int
}

Enum DayEnum {
    MONDAY
    TUESDAY
    WEDNESDAY
    THURSDAY
    FRIDAY
    SATURDAY
    SUNDAY
}

User ||..o{ GroupStudent: visits
SeminarGroup ||.r.o{ GroupStudent

User ||.u.o{ CourseStudent: visits
CourseSemester ||.r.o{ CourseStudent

Faculty ||.r.o{ Course
CourseSemester||..o{ SeminarGroup


Course ||..o{ CourseSemester
Semester||.r.o{ CourseSemester

User }|.l.o{ CourseSemester: teaches
User ||.l.o{ Course: guarantees
User }|.l.o{ SeminarGroup: teaches

CourseSemester |o..o| TimeSlot
SeminarGroup |o.l.|| TimeSlot

TimeSlot <|-l- DayEnum

Semester <|-u- SemesterSeasonEnum
@enduml